<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milymarket</string>
    <string name="like">J\u0027aime</string>
    <string name="unlike">Je n\u0027aime plus</string>
    <string name="addToList">Ajouter à la liste</string>
    <string name="editList">Modifier la liste</string>
    <string name="action_settings">Paramètres</string>
    <string name="hello_world">Bonjour!</string>
    <string name="twitter_callback">twitter-callback:///</string>
    <string name="signUpText">S\u0027inscrire</string>
    <string name="alreadyUser">Connectez vous</string>
    <string name="net">Oups!!! On dirait que votre réseau a un problème. Réessayez un tout petit peu plus tard.</string>
    <string name="neterror">Oups!!! On dirait que votre réseau a un problème. Réessayez un tout petit peu plus tard.</string>
    <string name="exit">quitter</string>
    <string name="Retry">réessayez</string>
    <string name="Filter">Filtrer</string>
    <string name="Cancel">Annuler</string>
    <string name="Apply">Sauver</string>
    <string name="save">Sauver</string>
    <string name="CurrentPassword">Mot de passe actuel</string>
    <string name="NewPassword">Nouveau mot de passe</string>
    <string name="ConfirmPassword">Mot de passe actuel(Vide si vous n\u0027en avez pas)</string>
    <string name="passwordCondition">Le mot de passe doit comporter au moins 6 caractères</string>
    <string name="nomoreItemInCart">Vous n\'avez pour l\'instant aucun article dans le panier</string>
    <string name="Remove">Supprimer</string>
    <string name="shippingNo">Expédition indisponible</string>
    <string name="Payment">Paiement</string>
    <string name="orderFrom">Vendeur: </string>
    <string name="noItem">Aucun élément à afficher pour l\'instant</string>
    <string name="Order">Commande</string>
    <string name="total">Total</string>
    <string name="Shipping">Livraison</string>
    <string name="Total">Total</string>
    <string name="pleaseWait">Merci d\u0027attendre pendant la mise à jour</string>
    <string name="Comments">Commentaires</string>
    <string name="writeacommment">Nouveau commentaire</string>
    <string name="Post">Envoyer</string>
    <string name="Enterthenametosearch">Rentrez un mot à rechercher</string>
    <string name="Search">Chercher</string>
    <string name="Emailsettings">Paramètres d\u0027email</string>
    <string name="Whensomeonefollowsyou">Quand un utilisateur s\u0027abonne à mon frofil</string>
    <string name="Whensomeonecommentsonathingyouadded">Quand un utilisateur commente un article que j\u0027ai ajouté</string>
    <string name="Whenoneofyourthingsisfeatured">Quand un de mes articles est mis en avant</string>
    <string name="Everything">Tout</string>
    <string name="followers">Abonnés</string>
    <string name="LoadingItems">Chargement</string>
    <string name="Email">Email</string>
    <string name="Password">Mot de passe</string>
    <string name="RememberMe">Se souvenir de moi</string>
    <string name="home">Récemment ajoutés </string>
    <string name="category">Catégorie </string>
    <string name="search">Recherche  </string>
    <string name="addproduct">Ajouter un article</string>
    <string name="messages">Notifications</string>
    <string name="nearme">Autour de moi</string>
    <string name="location">Autour de moi</string>
    <string name="MostPopular">Les tendances</string>
    <string name="cart">Panier</string>
    <string name="myorders">Mes commandes</string>
    <string name="settings">Paramètres</string>
    <string name="SignOut">Déconnexion</string>
    <string name="InviteFriends">Inviter des amis</string>
    <string name="FindFriends">Trouver des amis</string>
    <string name="SignIn">Connexion</string>
    <string name="reallyExit">Voulez vous vraiment fermer l\u0027application\u003F</string>
    <string name="keep">Continuer sur Milymarket</string>
    <string name="reallySignOut">Voulez\u002Dvous vraiment vous déconnecter\u003F</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="PleaseLoginToContinue">Bienvenue sur Milymarket. Connectez vous</string>
    <string name="Profile">PROFIL</string>
    <string name="ChangePassword">Changer de mot de passe</string>
    <string name="timeLineContents">Page d\u0027accueil</string>
    <string name="everything">Tout</string>
    <string name="Following">Abonnements</string>
    <string name="miscellenout">Autres</string>
    <string name="NotificationSettings">Paramètres de notification</string>
    <string name="AppVersion">Version</string>
    <string name="language">Choisir une langue</string>
    <string name="defaults">\u0028Default\u0029</string>
    <string name="french">Français</string>
    <string name="notification">Notification</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_twitter_post">TwitterPost</string>
    <string name="category_hint">Choisir une catégorie</string>
    <string name="ManageSellerAccount">Modifier mon compte vendeur</string>
    <string name="select">Type de vendeur</string>
    <string name="Menu">Menu</string>
    <string name="ManageAddress">Adresse de livraison</string>
    <string name="ManageShop">Ma boutique</string>
    <string-array name="seller_array">
        <item>Particulier</item>
        <item>Professionel</item>
        <item>Association</item>
    </string-array>

</resources>
