<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topcart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bg" >

            <ImageButton
                android:id="@+id/smenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/Payment"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#ffffff" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1.5"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/orderFrom"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/merchantname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/checkout_list_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/temp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >
            </ListView>

            <TextView
                android:id="@+id/noitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/noItem"
                android:textColor="#ff0000" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" > <!-- android:layout_weight="1.3" -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/Order"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="10dp"
                        android:text="@string/total"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/itemtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="10dp"
                        android:text="@string/Shipping"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/Shippingtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:padding="10dp"
                        android:text="@string/Total"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:textAlignment="textEnd"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/paywith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@null"
                    android:src="@drawable/paypal" />
            </LinearLayout>
        </ScrollView>

        <include
            android:id="@+id/tabbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            layout="@layout/tab" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomcart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/pleaseWait" />
    </LinearLayout>

</RelativeLayout>